--- a/trunk/basement/modules/intrabvv/.cvsignore
+++ b/trunk/basement/modules/intrabvv/.cvsignore
@@ -1,6 +1,8 @@
+.directory
 adressenprint.cfg.php
 beschaeftigte.cfg.php
 dienststellen.cfg.php
+ergebnisprotokoll.cfg.php
 gelbeseiten.cfg.php
 gesetz+verwaltung.cfg.php
 gesetze.cfg.php
@@ -10,7 +12,6 @@ listendruck.cfg.php
 menu-global.cfg.php
 menu-local.cfg.php
 neues.cfg.php
-old
 regionalportal.cfg.php
 sitemap.cfg.php
 usered.cfg.php
